# drosophila-brain

./: .gitignore  README.md  fetch-synapses.py  fetch_skeleton.py  heal_skeleton.py  link_closest.py  main.py  pyproject.toml  requirements.txt  skeleton.csv  synaptic_network.py
data/: delay_matrix_449438847.csv  delay_matrix_5813087532.csv  healed_skeleton_5813087532.csv  healed_skeleton_upgraded_5813087532.csv  linked_synapses.csv  linked_synapses_5813087532.csv  linked_synapses_upgraded_5813087532.csv  synapses.csv
src/: heal_skeleton.py  link_synapses.py  link_synapses_upgraded.py  main.py  utils.py
